@@ -8,7 +8,11 @@
   <%= @protocol %><%= @host %><%= @uri %>
 <% end -%>
 
-A<%= "/an #{@exception_classname}" || "n error" %> occurred:
+<% if !@exception_classname.nil? -%>
+A/an #{@exception_classname} occurred:
+<% else -%>
+An error occurred:
+<% end -%>
 <%= @error_message %>
 <% if @additional_messages.is_a?(Array) -%>
   <%= @additional_messages.join("\n  ") %>
